@@ -19,6 +19,8 @@
         * Added "-O" option to include product origin in output
         * Modified usage message to use LDM logging module
 
+    pqinsert(1): Added ability to read a single data-product from standard input
+
     keep_running(1):
         * Added a test for the executable's existance
 
